# vulkan_3d_framework

./: Cargo.toml  build.rs
.cargo/: config.toml
configs/: config.json  scene_layout.json
resources/materials/: default.json  floor.json  orange.json
scripts/: shader_mod_updater.py
shaders/: render.frag  render.vert  shader.frag  shader.vert  shadow.frag  shadow.vert
src/: app.rs  main.rs  rendering.rs  scripts.rs  shader_modules.rs  timing.rs  ui.rs
src/app/: logic.rs  rendering.rs  scene.rs  script_api.rs  shader_modules.rs  timing.rs  ui.rs  util.rs
src/scripts/: rotate.rs  script_a.rs  script_b.rs  test.rs
