[package]
name = "vulkan_3d_framework"
version = "0.0.12"
edition = "2024"

[build-dependencies]
convert_case = "0.11"
codegen = "0.3"

[dependencies]
vulkano = { version = "0.35", features = ["serde"] }
log = "0.4"
pretty_env_logger = "0.5"
vulkano-shaders = "0.35"
winit = "0.30"
obj-rs = { git = "https://github.com/simnalamburt/obj-rs", rev = "62455dd", features = ["vulkano"] }
glam = { version = "0.33", features = ["serde"] }
egui = "0.34"
egui_winit_vulkano = { git = "https://github.com/tsvdh/egui_winit_vulkano.git", version = "0.28.1" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
downcast-rs = "2.0"
